--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,5 @@ data_processing/hyperparameter_optimization/model_storage/*
 data_processing/hyperparameter_optimization/model_storage
 data_processing/hyperparameter_optimization/__pycache__
 data_processing/hyperparameter_optimization/__pycache__/*
-data_processing/hyperparameter_optimization/best_models_all_data.pkl
-data_processing/hyperparameter_optimization/best_models_garage_only.pkl
-data_processing/hyperparameter_optimization/best_models_indoor_only.pkl
-data_processing/hyperparameter_optimization/best_models_outdoor_and_garage.pkl
-data_processing/hyperparameter_optimization/best_models_outdoor_and_indoor.pkl
-data_processing/hyperparameter_optimization/best_models_outdoor_indoor_and_garage.pkl
-data_processing/hyperparameter_optimization/best_models_outdoor_only.pkl
+data_processing/hyperparameter_optimization/best_models
+data_processing/hyperparameter_optimization/best_models/*
