CNN and LSTM code started validation

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,25 @@ data_processing/CNN_hyperparameter_optimization/__pycache__
 data_processing/CNN_hyperparameter_optimization/__pycache__/*
 data_processing/CNN_hyperparameter_optimization/best_models
 data_processing/CNN_hyperparameter_optimization/best_models/*
+
+
+## LSTM OPTIOMIZATION
+
+data_processing/LSTM_hyperparameter_optimization/checkpoints/*
+data_processing/LSTM_hyperparameter_optimization/checkpoints
+data_processing/LSTM_hyperparameter_optimization/lightning_logs/*
+data_processing/LSTM_hyperparameter_optimization/lightning_logs
+data_processing/LSTM_hyperparameter_optimization/logs/*
+data_processing/LSTM_hyperparameter_optimization/logs
+data_processing/LSTM_hyperparameter_optimization/wandb/*
+data_processing/LSTM_hyperparameter_optimization/wandb
+data_processing/LSTM_hyperparameter_optimization/wifi-rssi-gradient-search/*
+data_processing/LSTM_hyperparameter_optimization/wifi-rssi-gradient-search
+data_processing/LSTM_hyperparameter_optimization/models/*
+data_processing/LSTM_hyperparameter_optimization/models
+data_processing/LSTM_hyperparameter_optimization/model_storage/*
+data_processing/LSTM_hyperparameter_optimization/model_storage
+data_processing/LSTM_hyperparameter_optimization/__pycache__
+data_processing/LSTM_hyperparameter_optimization/__pycache__/*
+data_processing/LSTM_hyperparameter_optimization/best_models
+data_processing/LSTM_hyperparameter_optimization/best_models/*
