--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ validation/model_per_dataset_validation/__pycache__
 validation/model_per_dataset_validation/__pycache__/*
 validation/model_per_dataset_validation/best_models
 validation/model_per_dataset_validation/best_models/*
+validation/model_per_dataset_validation/full_models
+validation/model_per_dataset_validation/full_models/*
