--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ validation/model_per_dataset_validation/best_models
 validation/model_per_dataset_validation/best_models/*
 validation/model_per_dataset_validation/full_models
 validation/model_per_dataset_validation/full_models/*
+validation/model_per_dataset_validation/eval_results.csv
+validation/dataset_size_validation/project.csv
