--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ validation/model_per_dataset_validation/full_models
 validation/model_per_dataset_validation/full_models/*
 validation/model_per_dataset_validation/eval_results.csv
 validation/dataset_size_validation/project.csv
+
+# Pycache
+
+**/__pycache__/**
+**/__pycache__/
