refactored ML optimization to grid search added mlp optimization with normal framework

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@ data_processing/parallel_grid_search/data_dir/*
 data_processing/parallel_grid_search/data_dir
 data_processing/parallel_grid_search/model_performance/*
 data_processing/parallel_grid_search/model_performance/
-data_processing/parallel_grid_search/__pycache__/
-data_processing/parallel_grid_search/__pycache__/*
 
 ## NN OPTIMIZATION
 
@@ -15,16 +13,12 @@ data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/lightning_
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/lightning_logs
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/logs/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/logs
-data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/wandb/*
-data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/wandb
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/wifi-rssi-gradient-search/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/wifi-rssi-gradient-search
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/models/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/models
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/model_storage*/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/model_storage*
-data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/__pycache__
-data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/__pycache__/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/best_models
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/best_models/*
 data_processing/hyperparameter_tunning/NN_hyperparameter_optimization/model_storage_second
@@ -41,16 +35,12 @@ data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/lightning
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/lightning_logs
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/logs/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/logs
-data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/wandb/*
-data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/wandb
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/wifi-rssi-gradient-search/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/wifi-rssi-gradient-search
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/models/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/models
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/model_storage*/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/model_storage*
-data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/__pycache__
-data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/__pycache__/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/best_models
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/best_models/*
 data_processing/hyperparameter_tunning/CNN_hyperparameter_optimization/model_storage_second
@@ -67,27 +57,40 @@ data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/lightnin
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/lightning_logs
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/logs/*
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/logs
-data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/wandb/*
-data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/wandb
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/wifi-rssi-gradient-search/*
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/wifi-rssi-gradient-search
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/models/*
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/models
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/model_storage*/*
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/model_storage*
-data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/__pycache__
-data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/__pycache__/*
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/best_models
 data_processing/hyperparameter_tunning/LSTM_hyperparameter_optimization/best_models/*
 
 ## MLP OPTIOMIZATION
 
-data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/__pycache__/
-data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/__pycache__/*
-data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/wandb/
-data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/wandb/*
-data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/checkpoints/
 data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/checkpoints/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/checkpoints
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/lightning_logs/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/lightning_logs
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/logs/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/logs
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/wifi-rssi-gradient-search/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/wifi-rssi-gradient-search
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/models/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/models
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/model_storage*/*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/model_storage*
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/best_models
+data_processing/hyperparameter_tunning/MLP_hyperparameter_optimization/best_models/*
+
+## MLP OPTIOMIZATION
+
+data_processing/hyperparameter_tunning/MLP_grid_search/__pycache__/
+data_processing/hyperparameter_tunning/MLP_grid_search/__pycache__/*
+data_processing/hyperparameter_tunning/MLP_grid_search/wandb/
+data_processing/hyperparameter_tunning/MLP_grid_search/wandb/*
+data_processing/hyperparameter_tunning/MLP_grid_search/checkpoints/
+data_processing/hyperparameter_tunning/MLP_grid_search/checkpoints/*
 
 # Validation
 
@@ -102,7 +105,9 @@ validation/model_per_dataset_validation/full_models/*
 validation/model_per_dataset_validation/eval_results.csv
 validation/dataset_size_validation/project.csv
 
-# Pycache
+# WANDB and PYCACHE
 
+**/wandb/
+**/wandb/*
 **/__pycache__/**
 **/__pycache__/
